fixed when footer is too high so that there is white below it

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,7 @@
+html {
+  background-color: whiteSmoke;
+}
+
 body {
   position: relative;
   padding-top: 46px;
